--- a/librclone/ctest/Makefile
+++ b/librclone/ctest/Makefile
@@ -1,21 +1,13 @@
 CFLAGS = -g -Wall
 LDFLAGS = -L. -lrclone -lpthread -ldl
 
-static: ctest
-
-shared:
-	go build --buildmode=c-shared -o librclone.so github.com/rclone/rclone/librclone
-
-ctest: ctest.o librclone.h
+ctest: ctest.o librclone.a
 	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
 
 ctest.o: ctest.c librclone.h
 	$(CC) $(CFLAGS) -c $^ $(LDFLAGS)
 
-build:
-	go build
-
-librclone.h:
+librclone.a librclone.h:
 	go build --buildmode=c-archive -o librclone.a github.com/rclone/rclone/librclone
 
 clean:
