librclone: add tests for build and execute them in the actions #4891

--- a/librclone/ctest/Makefile
+++ b/librclone/ctest/Makefile
@@ -10,5 +10,8 @@ ctest.o: ctest.c librclone.h
 librclone.a librclone.h:
 	go build --buildmode=c-archive -o librclone.a github.com/rclone/rclone/librclone
 
+test:	ctest
+	./ctest
+
 clean:
 	rm -f tmp ctest *.o *.a *.h *.gch
